--- a/index.html
+++ b/index.html
@@ -13,6 +13,18 @@
             <div class="logo">
                 <a href="#"> <img src="./assets/logo.jpg" width="100" alt=""></a>
             </div>
+
+            <ul class="nav-links">
+             <li><a href="#">Shop</a></li>
+             <li><a href="#">Mobile</a></li>
+             <li><a href="#">TV & AV</a></li>
+             <li><a href="#">Home Appliances</a></li>
+             <li><a href="#">Laptop & Monitors</a></li>
+             <li><a href="#">Displays</a></li>
+             <li><a href="#">Accessories</a></li>
+             <li><a href="#">SmartThings</a></li>
+
+            </ul>
         </div>
     </nav>
 </body>
