--- a/index.html
+++ b/index.html
@@ -23,8 +23,35 @@
              <li><a href="#">Accessories</a></li>
              <li><a href="#">SmartThings</a></li>
 
-            </ul>
+            <li>
+                <a href="#"><i class="fa-solid fa-magnifying-glass"></i>
+             </a>
+            </li>
+            <li>
+                <a href="#"><i class="fa-solid fa-cart-shopping"></i>
+             </a>
+            </li>
+            <li>
+                <a href="#"><i class="fa-regular fa-user"></i>
+             </a>
+            </li>
+        </ul>
         </div>
     </nav>
+     
+    <!-- Nav Bar Ends -->
+
+    <div class="container">
+        <video src="assets/Video.mp4" autoplay muted loop class="background-clip"></video>
+        <div class="content">
+            <h1>Galaxy S23 Ultra</h1>
+            <h4>Designed with the planet in mind</h4>
+
+            <div class="btn1">Learn More</div>
+            <div class="btn2">Buy now</div>
+
+        </div>
+    </div>
+    <script src="https://kit.fontawesome.com/f36b54ae42.js"></script>
 </body>
 </html>
